# multhytale-cli

./: LICENSE  README.md  pyproject.toml
multhytale_cli/: main.py
multhytale_cli/src/: version.py
