[project]
name = "multhytale-cli"
version = "0.1.0"
description = 'Command Line Interface for MultHytale'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt5>=5.15.11",
    "rich>=14.2.0",
    "typer>=0.21.1",
]


[project.scripts]
multhytale = "multhytale_cli.main:app"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multhytale_cli"
module-root = ""
